--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "start":"bun run index.ts",
-    "dev":"bun --watch index.ts"
+    "start": "bun run index.ts",
+    "dev": "bun --watch index.ts"
   },
   "private": true,
   "devDependencies": {
@@ -12,5 +12,10 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "axios": "^1.13.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   }
 }
